scss/partials/_user_profile.scss
@import "vars/main";

div.user-profile {
  background-color: $carrot_modal_bg;
  position: absolute;
  position: fixed;
  top: 0px;
  left: 0px;
  z-index: 1000;
  overflow-x: hidden;
  overflow-y: auto;
  height: 100vh;

  button.settings-modal-close {
    right: -56px;
    top: 0px;
  }

  @include mobile() {
    background-color: white;
    height: calc(100vh - 65px);
    top: 65px;
  }

  div.user-profile-inner {
    width: #{$settings_content_width}px;
    margin: 72px auto;
    border: 1px solid rgba($deep_tan, 0.7);
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
    background-color: white;
    overflow-x: visible;
    overflow-y: auto;
    overflow: visible;
    position: relative;
    border-radius: 4px;
    padding: 32px 24px;

    @include mobile() {
      width: 100%;
      margin: 0px auto;
      box-shadow: none;
      border: none;
      border-radius: 0px;
    }

    div.user-profile-header {
      position: relative;
      color: $deep_navy;

      div.user-profile-header-avatar {
        float: left;
        width: 48px;
        height: 48px;

        &.profile-tab {
          cursor: pointer;
        }

        @include user-profile(48);
      }

      div.user-profile-header-name {
        @include avenir_H();
        font-size: 22px;
        color: $deep_navy;
        margin-left: 64px;
      }

      div.user-profile-header-role {
        @include avenir_R();
        font-size: 18px;
        color: $light_ui_grey;
        margin-left: 64px;
      }
    }

    div.user-profile-tabs-header {
      min-height: 24px;
      position: relative;
      margin-top: 32px;
      margin-bottom: 32px;

      div.user-profile-bottom-line {
        width: 100%;
        height: 1px;
        background-color: rgba($deep_tan, 0.3);
        position: absolute;
        bottom: 0px;
        left: 0px;
      }

      div.user-profile-tab-header {
        height: 33px;
        float: left;
        width: auto;
        margin: 1px 24px 0px 0px;
        border-bottom: 1px solid transparent;

        a.user-profile-tab-link {
          display: block;
          width: auto;
          height: 24px;
          margin: 0;
          padding: 0;
          cursor: pointer;
          @include avenir_B();
          font-size: 13px;
          color: $ui_grey;
          text-decoration: none;
          text-transform: uppercase;
          outline: none;

          &:active, &:hover, &:focus {
            text-decoration: none;
          }
        }

        &:hover {
          border-bottom: 1px solid $carrot_orange;
        }

        &.active {
          border-bottom: 1px solid $carrot_orange;

          a.user-profile-tab-link {
            padding: 0;
            color: $carrot_orange;

            @include mobile() {
              font-size: 14px;
            }
          }
        }
      }
    }

    div.user-profile-footer {
      background-color: white;
      position: relative;
      height: 40px;

      button {
        float: right;
        margin-left: 24px;
        @include avenir_M();
        font-size: 15px;
      }

      button.save-bt {
        min-width: 100px;
        background-color: $carrot_green;
        border-radius: 100px;
        color: white;
        @include avenir_H();
        font-size: 16px;
        height: 40px;

        &.no-disable[disabled] {
          opacity: 1 !important;
        }
      }

      button.cancel-bt {
        height: 40px;
        color: $ui_grey;
      }
    }

    div.user-profile-internal {
      position: relative;
      background-color: white;
      margin: 0 auto;

      div.user-profile-content {

        div.user-profile-avatar-box {
          height: 72px;
          margin-bottom: 40px;
          width: 338px;

          button.user-profile-avatar {
            width: 72px;
            height: 72px;
            float: left;
            cursor: pointer;
            margin: 0;
            padding: 0;
            opacity: 1;

            img.user-avatar-img {
              width: 72px;
              height: 72px;
            }
          }

          button.upload-photo {
            float: right;
            width: 236px;
            height: 72px;
            text-align: left;
            margin: 0;
            padding: 0;
            opacity: 1;

            &:hover {
              span.user-avatar-upload-cta {
                text-decoration: underline;
              }
            }

            span.user-avatar-upload-cta {
              float: left;
              width: 100%;
              margin-top: 6px;
            }

            span.user-avatar-upload-description {
              color: #a3a6ab;
              @include avenir_BOOK();
              font-size: 14px;
              float: left;
              width: 100%;
              margin-top: 8px;
            }
          }
        }

        div.user-profile-field-box {
          text-align: left;

          &.password-update {
            margin-top: 32px;
          }

          div.user-profile-field-label {
            @include avenir_M();
            font-size: 15px;
            color: $deep_navy;
            margin-top: 32px;

            span.error {
              margin-left: 16px;
              color: $carrot_orange;
            }

            i.mdi.mdi-information-outline {
              margin-left: 8px;
              
              &:before {
                font-size: 14px;
              }
            }
          }

          div.user-profile-field {
            margin: 8px 0 24px 0;
            padding: 0;

            div.dropdown-button {
              height: 40px;
              padding: 10px 8px;
              border: 1px solid rgba($carrot_light_gray_1, 0.5);
              border-radius: 4px;

              button {
                width: 100%;
                text-align: left;
              }
            }

            input, select {
              width: 100%;
              height: 40px;
              border-radius: 4px;
              background-color: white;
              border: 1px solid rgba($carrot_light_gray_1, 0.5);
              outline: none;
              padding: 10px 16px;
              position: relative;
              @include avenir_M();
              font-size: 15px;
              color: $deep_navy;

              &:disabled {
                opacity: 0.5;
              }

              @include placeholder() {
                @include avenir_R();
                font-size: 16px;
                color: $carrot_light_gray;
              }
            }
          }
        }

        div.user-profile-column-left {
          float: left;
          width: calc(50% - 8px);
          margin-right: 8px;

          @include mobile() {
            float: unset;
            width: 100%;
            margin-right: 0px;
          }
        }

        div.user-profile-column-right {
          float: right;
          width: calc(50% - 8px);
          margin-left: 8px;

          @include mobile() {
            float: unset;
            width: 100%;
            margin-left: 0px;
          }
        }
      }
    }

  }
}

