Fix profile on mobile.

--- a/scss/partials/_user_profile.scss
+++ b/scss/partials/_user_profile.scss
@@ -20,6 +20,7 @@ div.user-profile {
     background-color: white;
     height: calc(100vh - 65px);
     top: 65px;
+    position: absolute;
   }
 
   div.user-profile-inner {
